--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://db-mysql-sgp1-79056-do-user-11291412-0.b.db.ondigitalocean.com:25060/search?ssl-mode=REQUIRED<password-unavailable>
+spring.datasource.username=ocean
+spring.datasource.password=ocean
